--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CONNECTION_STRING = mongodb+srv://Napasin:Mm0839006123^@iotcluster.sknwe2l.mongodb.net/?retryWrites=true&w=majority
+CONNECTION_STRING = mongodb+srv://Napasin:Mm0839006123^@iotcluster.sknwe2l.mongodb.net/IoTPM?retryWrites=true&w=majority
